--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
   <title>Hangman</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/game.css"/>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:700" rel="stylesheet">
-    <script defer src="js/game.js"></script>
+  <script defer src="js/game.js"></script>
 </head>
 
 <body>
@@ -24,100 +24,14 @@
     </div>
 
     <div class="game">
-      <h2>Secret Word:<label>_ _ _ _ _ _ _ _</label></h2>
+      <h2><label>_ _ _ _ _ _ _ _</label><button><img style="float: left" src="img/rectangular-flag.png"><br>Give Up</button></h2>
       <img src="img/man-on-a-chair-before-suicide-with-a-hanging-rope.png">
     </div>
 
-    <div class="alphabet">
-        <button id="a" style="background: green;" disabled="disabled">A: 20</button>
-        <button id="b" style="background: red;" disabled="disabled">B: 20</button>
-        <button id="c">C: 20</button>
-        <button id="d">D: 20</button>
-        <button id="e">E: 20</button>
-        <button id="f">F: 20</button>
-        <button id="g">G: 20</button>
-        <button id="h">H: 20</button>
-        <button id="i">I: 20</button>
-        <button id="j">J: 20</button>
-        <button id="k">K: 20</button>
-        <button id="l">L: 20</button>
-        <button id="m">M: 20</button>
-        <button id="n">N: 20</button>
-        <button id="o">O: 20</button>
-        <button id="p">P: 20</button>
-        <button id="q">Q: 20</button>
-        <button id="r">R: 20</button>
-        <button id="s">S: 20</button>
-        <button id="t">T: 20</button>
-        <button id="u">U: 20</button>
-        <button id="v">V: 20</button>
-        <button id="w">W: 20</button>
-        <button id="x">X: 20</button>
-        <button id="y">Y: 20</button>
-        <button id="z">Z: 20</button>
-      </div>
+    <div id="alphabet"></div>
   </div>
 
-  <div class="cardContainer">
-    <div class="card" title="This is my tooltip">
-        <div class="cardTop">
-            <button class="info"><img src="img/information-symbol.png"></button>            <h4>Risk</h4>
-        </div>
-        <div class="cardBottom">
-            <label><img src="img/item-interconnections.png">: 1<br></label>
-            <label><img src="img/diamond24.png">  : 20</label>
-            <button id="risk"><label>USE</label></button>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="cardTop">
-            <button class="info"><img src="img/information-symbol.png"></button>
-            <h4>Consolation</h4>
-        </div>
-        <div class="cardBottom">
-            <label><img src="img/item-interconnections.png">: 1<br></label>
-            <label><img src="img/diamond24.png">  : 20</label>
-            <button id="consolation"><label>USE</label></button>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="cardTop">
-            <button class="info"><img src="img/information-symbol.png"></button>            <h4>Discount</h4>
-        </div>
-        <div class="cardBottom">
-            <label><img src="img/item-interconnections.png">: 1<br></label>
-            <label><img src="img/diamond24.png">  : 20</label>
-            <button id="discount"><label>USE</label></button>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="cardTop">
-            <button class="info"><img src="img/information-symbol.png"></button>            <h4>Buy a Letter</h4>
-        </div>
-        <div class="cardBottom">
-            <label><img src="img/item-interconnections.png">: 1<br></label>
-            <label><img src="img/diamond24.png">  : 20</label>
-            <button id="buyaletter"><label>USE</label></button>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="cardTop">
-            <button class="info"><img src="img/information-symbol.png"></button>
-            <h4>Category</h4>
-        </div>
-        <div class="cardBottom">
-            <label><img src="img/item-interconnections.png"> : 1<br></label>
-            <label><img src="img/diamond24.png">  : 20</label>
-            <button id="category"><label>USE</label></button>
-        </div>
-    </div>
-
-  </div>
-
+  <div id="cardContainer"></div>
   <div class="footer">
     <label>Oğuz GÜL</label>
   </div>
