alphabet and card config added

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
   <title>Hangman</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/game.css"/>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:700" rel="stylesheet">
-  <script defer src="js/game2.js"></script>
+  <script defer src="js/game_v2.js"></script>
 </head>
 
 <body>
