--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
   <div class="topBar">
       <ul class="navBar">
           <li class="homeNavigator">HANGMAN</li>
-          <li class="howToPlay">HOW TO PLAY?</li>
+          <li class="howToPlay">HOW TO PLAY</li>
       </ul>
   </div>
   <div id="mainArea">
